# extract-data-from-pdf

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  FILES_TO_REMOVE_ANALYSIS.md  GPU_SETUP.md  LICENSE  MODEL_LOADING_ISSUES.md  PLAN_COMPLETION_REPORT.md  POST_IMPLEMENTATION_ACTIONS.md  QUICK_START_RELEASE.md  README.md  RELEASE.md  REPOSITORY_ANALYSIS.md  TROUBLESHOOTING.md  api_key_manager.py  chandra_output_formatter.py  check_gpu.py  deepseek_api.py  diagnose_chandra.py  extract_ec_data.py  extract_ec_data_api.py  extract_ec_data_cpu.py  extract_ec_data_easyocr.py  extract_ec_data_gemini.py  extract_ec_data_hf_api.py  extract_ec_data_pretty.py  extract_ec_data_pytesseract.py  extraction_service.py  field_detector.py  field_presets.py  gemini_test_modules.py  gpu_check_utils.py  list_gemini_models.py  logging_config.py  (+16 more)
.github/: SECURITY.md  pull_request_template.md
ec/: .~lock.RG EC 103 3_extracted_gemini.xlsx#  .~lock.batch_extracted_gemini.xlsx#  RG EC 103 3_extracted_gemini.csv  RG EC 103 3_extracted_gemini.xlsx  RG EC 103 4_extracted_gemini.csv  RG EC 103 4_extracted_gemini.xlsx  RG EC 104 1_extracted_gemini.csv  RG EC 104 1_extracted_gemini.xlsx  RG EC 104 4_extracted_gemini.csv  RG EC 104 4_extracted_gemini.xlsx  RG EC 264 5_extracted_gemini.csv  RG EC 264 5_extracted_gemini.xlsx  RG EC 264 8_extracted_gemini.csv  RG EC 264 8_extracted_gemini.xlsx  RG EC 264-6_extracted_gemini.csv  RG EC 264-6_extracted_gemini.xlsx  batch_extracted_gemini.csv  batch_extracted_gemini.xlsx  ec_combine_output.xlsx
ec2/: 21 1 6 7_extracted_gemini.csv  21 1 6 7_extracted_gemini.xlsx  22 5 10B_extracted_gemini.csv  22 5 10B_extracted_gemini.xlsx  EC 24_extracted_gemini.csv  EC 24_extracted_gemini.xlsx  EC 28 4 5_extracted_gemini.csv  EC 28 4 5_extracted_gemini.xlsx  RG 1 EC 21,2,3,4,5_extracted_gemini.csv  RG 1 EC 21,2,3,4,5_extracted_gemini.xlsx  RG 1 EC 22,1,2,6,9,10A_extracted_gemini.csv  RG 1 EC 22,1,2,6,9,10A_extracted_gemini.xlsx  RG 1 EC 23,3,4,5,6,7,8_extracted_gemini.csv  RG 1 EC 23,3,4,5,6,7,8_extracted_gemini.xlsx  RG 1 EC 28,3,6_extracted_gemini.csv  RG 1 EC 28,3,6_extracted_gemini.xlsx  RG 2 EC 22,3,4_extracted_gemini.csv  RG 2 EC 22,3,4_extracted_gemini.xlsx  RG 2 EC 22,7,8_extracted_gemini.csv  RG 2 EC 22,7,8_extracted_gemini.xlsx  RG 2 EC 28,1,2_extracted_gemini.csv  RG 2 EC 28,1,2_extracted_gemini.xlsx  batch_extracted_gemini.csv  batch_extracted_gemini.xlsx  ec2_combine_output.xlsx
ec3/: EC 24_extracted_gemini.csv  EC 24_extracted_gemini.xlsx  RG 1 EC 22,1,2,6,9,10A_extracted_gemini.csv  RG 1 EC 22,1,2,6,9,10A_extracted_gemini.xlsx  RG 1 EC 23,3,4,5,6,7,8_extracted_gemini.csv  RG 1 EC 23,3,4,5,6,7,8_extracted_gemini.xlsx  RG 2 EC 22,7,8_extracted_gemini.csv  RG 2 EC 22,7,8_extracted_gemini.xlsx  RG 2 EC 28,1,2_extracted_gemini.csv  RG 2 EC 28,1,2_extracted_gemini.xlsx  ec3_combine_output.xlsx
examples/: README.md  extract_ec_data.py  extract_ec_data_api.py  extract_ec_data_cpu.py  extract_ec_data_easyocr.py  extract_ec_data_gemini.py  extract_ec_data_hf_api.py  extract_ec_data_pretty.py  extract_ec_data_pytesseract.py
scripts/: README.md  bump_version.py
(+23 files in other folders)
